Fixed first run dialog CSS -moz-box-align error. r=me
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10789 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/firstRunWizard.css
+++ b/app/skin/dialogs/firstRunWizard.css
@@ -207,7 +207,7 @@ button[hidewizardbutton="true"] {
 /* Add-ons page item box style. */
 .sb-first-run-add-ons-item-box {
   -moz-box-flex: 1;
-  -moz-box-align:top;
+  -moz-box-align: start;
 
   /* Set max-width so that item description will properly wrap. */
   /*XXXeps is there some way that wrap will work by just setting the first */
